--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -4,7 +4,7 @@
         android:title="@string/home"
         android:icon="@drawable/outline_home_black_24dp"
         />
-    <item android:id="@+id/menu_events"
+    <item android:id="@+id/menu_eventsList"
         android:title="@string/near_me"
         android:icon="@drawable/outline_location_on_black_24dp"
         />
