--- a/app/src/main/res/navigation/login_nav.xml
+++ b/app/src/main/res/navigation/login_nav.xml
@@ -63,15 +63,15 @@
         <action
             android:id="@+id/action_profile2_to_eventsList"
             app:destination="@id/eventsList" />
+        <action
+            android:id="@+id/action_profile2_to_contactFragment2"
+            app:destination="@id/contactFragment2" />
     </fragment>
     <fragment
         android:id="@+id/eventsList"
         android:name="com.latifah.techbook.ui.fragments.EventsList"
-        android:label="Events List"
+        android:label="Near Me"
         tools:layout="@layout/events_list_fragment" >
-        <action
-            android:id="@+id/action_eventsList_to_events"
-            app:destination="@id/events" />
         <action
             android:id="@+id/action_eventsList_to_event"
             app:destination="@id/event" />
@@ -109,5 +109,30 @@
         android:name="location"
         app:argType="string"
         android:defaultValue="default" />
+    <fragment
+        android:id="@+id/contactFragment2"
+        android:name="com.latifah.techbook.ui.fragments.ContactFragment"
+        android:label="ContactFragment" >
+        <action
+            android:id="@+id/action_contactFragment2_to_contactReceiverFragment"
+            app:destination="@id/contactReceiverFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/contactReceiverFragment"
+        android:name="com.latifah.techbook.ui.fragments.ContactReceiverFragment"
+        android:label="Receiver"
+        tools:layout="@layout/fragment_contact_receiver" >
+        <argument
+            android:name="contactName"
+            app:argType="string" />
+        <argument
+            android:name="contactEmail"
+            app:argType="string" />
+    </fragment>
+    <fragment
+        android:id="@+id/newPost3"
+        android:name="com.latifah.techbook.ui.fragments.NewPost"
+        android:label="New Post"
+        tools:layout="@layout/fragment_new_post" />
 
 </navigation>
