--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/menu_profile"
-        android:title="@string/me"
+        android:title="Profile"
         android:icon="@drawable/outline_account_circle_black_24dp"
         />
     <item android:id="@+id/menu_eventsList"
