--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
@@ -22,13 +22,13 @@
 
             <ImageView
                 android:id="@+id/imageView3"
-                android:layout_width="match_parent"
-                android:layout_height="352dp"
-                android:layout_marginBottom="8dp"
+                android:layout_width="372dp"
+                android:layout_height="417dp"
+                android:layout_marginBottom="144dp"
                 android:scaleType="centerCrop"
                 app:layout_constraintBottom_toTopOf="@+id/post_caption"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.38"
+                app:layout_constraintHorizontal_bias="0.304"
                 app:layout_constraintStart_toStartOf="parent"
                 app:srcCompat="@drawable/techbooklogo" />
 
@@ -36,11 +36,12 @@
                 android:id="@+id/post_username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="416dp"
                 android:text="username"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.463"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -48,43 +49,45 @@
                 android:id="@+id/post_firstname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="152dp"
+                android:layout_marginStart="80dp"
                 android:layout_marginTop="12dp"
                 android:layout_marginBottom="63dp"
                 android:text="firstname"
                 android:textAlignment="center"
                 app:layout_constraintBottom_toTopOf="@+id/imageView3"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/post_username" />
+                app:layout_constraintTop_toBottomOf="@+id/post_username"
+                app:layout_constraintVertical_bias="0.0" />
 
             <TextView
                 android:id="@+id/post_lastname"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="18dp"
                 android:layout_marginTop="12dp"
-                android:layout_marginEnd="140dp"
+                android:layout_marginEnd="36dp"
                 android:layout_marginBottom="63dp"
                 android:text="lastname"
                 android:textAlignment="center"
                 app:layout_constraintBottom_toTopOf="@+id/imageView3"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/post_username" />
+                app:layout_constraintTop_toBottomOf="@+id/post_username"
+                app:layout_constraintVertical_bias="0.053" />
 
             <TextView
                 android:id="@+id/post_caption"
-                android:layout_width="match_parent"
-                android:layout_height="153dp"
+                android:layout_width="368dp"
+                android:layout_height="120dp"
                 android:layout_marginEnd="12sp"
-                android:layout_marginBottom="64dp"
+                android:layout_marginBottom="40dp"
                 android:text="This is the caption for a post. You can say whatever you want here! Words..letters...numbers...all sorts of things. Filler text. Filler filler filler filer filler filer fefie felf ffler. Should comments be a part of this? Or another fragment? Probably a fragment. I think this is enough text though. "
                 android:textAlignment="center"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.571"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent" />
 
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
 </androidx.cardview.widget.CardView>
