--- a/app/src/main/res/navigation/bottom_navigation.xml
+++ b/app/src/main/res/navigation/bottom_navigation.xml
@@ -7,7 +7,7 @@
     app:startDestination="@id/profile2">
 
     <fragment
-        android:id="@+id/profile"
+        android:id="@+id/profile2"
         android:name="com.latifah.techbook.ui.fragments.Profile"
         android:label="Profile"
         tools:layout="@layout/fragment_profile">
