added something on eventlist fragment oncreate and main activity so that the navigation will show throughout all the fragments but if I go back.. I get a different error

--- a/app/src/main/res/layout/fragment_events.xml
+++ b/app/src/main/res/layout/fragment_events.xml
@@ -2,10 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/frameLayout4"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    tools:context=".ui.fragments.Events">
 
     <TextView
         android:id="@+id/event_time"
@@ -92,5 +91,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/event_image"
         app:layout_constraintVertical_bias="0.195" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
