Initialized loginborder.xml, needs edits, Re-Constrained Login fragment_login.xml

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
+    android:backgroundTint="@color/black"
     tools:context=".ui.fragments.Login">
 
     <EditText
@@ -14,12 +15,12 @@
         android:layout_height="106dp"
         android:layout_marginTop="224dp"
         android:ems="10"
-        android:hint="email"
+        android:hint="enter email here"
         android:inputType="textEmailAddress"
         android:textAlignment="center"
-        android:textColor="#F8F6F6"
-        android:textColorHint="#D3D1D1"
-        android:textStyle="bold"
+        android:textColor="#EAE4E4"
+        android:textColorHint="#94FFFFFF"
+        android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -29,13 +30,13 @@
         android:layout_width="265dp"
         android:layout_height="111dp"
         android:ems="10"
-        android:hint="password"
+        android:hint="enter password here"
         android:inputType="textPassword"
         android:textAlignment="center"
-        android:textColor="#F8F6F6"
-        android:textColorHint="#D3D1D1"
-        android:textSize="16sp"
-        android:textStyle="bold"
+        android:textColor="#D3F8F6F6"
+        android:textColorHint="#94FFFFFF"
+        android:textSize="18sp"
+        android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,8 +45,8 @@
 
     <TextView
         android:id="@+id/forgot_password"
-        android:layout_width="132dp"
-        android:layout_height="34dp"
+        android:layout_width="133dp"
+        android:layout_height="46dp"
         android:layout_marginTop="20dp"
         android:text="Forgot Password?"
         android:textAlignment="center"
@@ -58,34 +59,37 @@
 
     <TextView
         android:id="@+id/need_account"
-        android:layout_width="131dp"
-        android:layout_height="38dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="133dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="4dp"
         android:text="Need Account?"
         android:textAlignment="center"
         android:textColor="#F6F2F2"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.521"
+        app:layout_constraintHorizontal_bias="0.525"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/forgot_password" />
 
     <Button
         android:id="@+id/login_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="92dp"
+        android:layout_width="133dp"
+        android:layout_height="62dp"
+        android:layout_marginBottom="80dp"
+        android:background="@color/light_blue_900"
+        android:backgroundTint="@color/light_blue_900"
+        android:backgroundTintMode="src_over"
         android:text="Login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.525"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/logo"
         android:layout_width="192dp"
         android:layout_height="179dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:src="@drawable/techbooklogo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.538"
