--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -14,7 +17,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="723dp"
             android:orientation="vertical">
 
             <!-- Media -->
@@ -22,8 +25,8 @@
 
             <ImageView
                 android:id="@+id/imageView3"
-                android:layout_width="372dp"
-                android:layout_height="417dp"
+                android:layout_width="384dp"
+                android:layout_height="382dp"
                 android:layout_marginBottom="144dp"
                 android:scaleType="centerCrop"
                 app:layout_constraintBottom_toTopOf="@+id/post_caption"
@@ -36,49 +39,49 @@
                 android:id="@+id/post_username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="416dp"
                 android:text="username"
                 android:textSize="20sp"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/post_caption"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.463"
+                app:layout_constraintHorizontal_bias="0.095"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.917" />
 
             <TextView
                 android:id="@+id/post_firstname"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="80dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginBottom="63dp"
+                android:layout_width="105dp"
+                android:layout_height="32dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="9dp"
+                android:layout_marginBottom="91dp"
                 android:text="firstname"
                 android:textAlignment="center"
-                app:layout_constraintBottom_toTopOf="@+id/imageView3"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/post_username"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintBottom_toTopOf="@+id/post_caption"
+                app:layout_constraintEnd_toStartOf="@+id/post_lastname"
+                app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
             <TextView
                 android:id="@+id/post_lastname"
-                android:layout_width="wrap_content"
-                android:layout_height="18dp"
+                android:layout_width="108dp"
+                android:layout_height="33dp"
                 android:layout_marginTop="12dp"
-                android:layout_marginEnd="36dp"
+                android:layout_marginEnd="144dp"
                 android:layout_marginBottom="63dp"
                 android:text="lastname"
                 android:textAlignment="center"
                 app:layout_constraintBottom_toTopOf="@+id/imageView3"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/post_username"
-                app:layout_constraintVertical_bias="0.053" />
+                app:layout_constraintVertical_bias="0.157" />
 
             <TextView
                 android:id="@+id/post_caption"
                 android:layout_width="368dp"
                 android:layout_height="120dp"
                 android:layout_marginEnd="12sp"
-                android:layout_marginBottom="40dp"
+                android:layout_marginBottom="44dp"
                 android:text="This is the caption for a post. You can say whatever you want here! Words..letters...numbers...all sorts of things. Filler text. Filler filler filler filer filler filer fefie felf ffler. Should comments be a part of this? Or another fragment? Probably a fragment. I think this is enough text though. "
                 android:textAlignment="center"
                 android:textSize="16sp"
